--- a/build.xml
+++ b/build.xml
@@ -342,7 +342,7 @@
             <arg value="${type}"/>
         </exec>
 
-        <exec executable="${basedir}/build/tools/php-scoper" taskname="php-scoper">
+        <exec executable="${basedir}/tools/php-scoper" taskname="php-scoper">
             <arg value="add-prefix" />
             <arg value="--no-ansi" />
             <arg value="--force" />
@@ -357,7 +357,7 @@
             <arg path="${basedir}/build/phar" />
         </exec>
 
-        <exec executable="${basedir}/build/tools/phpab" taskname="phpab" failonerror="true">
+        <exec executable="${basedir}/tools/phpab" taskname="phpab" failonerror="true">
             <arg value="--all" />
             <arg value="--static" />
             <arg value="--once" />
@@ -390,8 +390,8 @@
 
         <chmod file="${basedir}/build/phpunit-${_version}.phar" perm="ugo+rx"/>
 
-        <!--<delete dir="${basedir}/build/phar"/>-->
-        <!--<delete dir="${basedir}/build/phar-scoped"/>-->
+        <delete dir="${basedir}/build/phar"/>
+        <delete dir="${basedir}/build/phar-scoped"/>
         <delete file="${basedir}/build/binary-phar-autoload.php"/>
     </target>
 
