--- a/src/Framework/MockObject/Generator/proxied_method.tpl.dist
+++ b/src/Framework/MockObject/Generator/proxied_method.tpl.dist
@@ -12,15 +12,11 @@
             }
         }
 
-        $__phpunit_invocation = new \PHPUnit\Framework\MockObject\Invocation\ObjectInvocation(
-            '{class_name}', '{method_name}', $__phpunit_arguments, '{return_type}', $this, {clone_arguments}
+        $this->__phpunit_getInvocationMocker()->invoke(
+            new \PHPUnit\Framework\MockObject\Invocation\ObjectInvocation(
+                '{class_name}', '{method_name}', $__phpunit_arguments, '{return_type}', $this, {clone_arguments}, true
+            )
         );
-
-        $__phpunit_invocation->setProxiedCall();
-
-        $this->__phpunit_getInvocationMocker()->invoke($__phpunit_invocation);
-
-        unset($__phpunit_invocation);
 
         return call_user_func_array(array($this->__phpunit_originalObject, "{method_name}"), $__phpunit_arguments);
     }
